--- a/styles/main.css
+++ b/styles/main.css
@@ -22,5 +22,9 @@ h2 {
 table {
   color: green;
   background-color:pink;
-  padding: 20px 20px 20px 20px
+  padding: 20px 20px 20px 20px;
+}
+.responsive-img {
+  max-width: 100%;
+  height: auto;
 }
