--- a/styles/main.css
+++ b/styles/main.css
@@ -28,3 +28,23 @@ table {
   max-width: 100%;
   height: auto;
 }
+
+@media (max-width: 768px) {
+
+  body {background-color: rgb(150, 92, 150);}
+  h1 {background-color: rgb(255, 230, 0)}
+}
+
+@media (max-width: 320px) {
+  h1 {
+    color: rgb(71, 49, 236);
+    background-color: rgb(181, 167, 239);
+
+  }
+}
+@media (min-width: 1200px) {
+  p {
+    padding: 20px 0px 20px 20px;
+    font-size: 25px;
+  }
+}
