--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ p {
   background-color: burlywood;
   font-size: 20px;
   font-weight: 50;
-  /* font-family: 'Caladea', serif; */
+  font-family: 'Caladea', serif;
 }
 
 h2 {
