--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ h1 {
 }
 p {
   color: rgb(195, 89, 195);
-  background-color: burlywood;
+  background-color: blanchedalmond;
   font-size: 20px;
   font-weight: 50;
   font-family: 'Caladea', serif;
@@ -52,6 +52,10 @@ table {
     padding: 20px 0px 20px 20px;
     font-size: 25px;
   }
+}
+
+div {
+  background-color:blanchedalmond;
 }
 /* @font-face {
   font-family: 'Pacifico', cursive;
