--- a/styles/main.css
+++ b/styles/main.css
@@ -44,11 +44,19 @@ table {
   color: green;
   background-color:pink;
   padding: 20px 20px 20px 20px;
+  border-radius: 10px;
+  border-color:rgb(255, 230, 0);
+  border-width: 5px;
+  border-style: solid;
   /* font-family: 'Caladea', serif; */
 }
 .responsive-img {
   max-width: 100%;
   height: auto;
+  border-radius: 10px;
+  border-color:plum;
+  border-width: 5px;
+  border-style: solid;
 }
 
 @media (max-width: 768px) {
@@ -77,7 +85,30 @@ div {
   border-width: 5px;
   border-style: solid;
 }
-/* @font-face {
-  font-family: 'Pacifico', cursive;
-  src: url(https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pacifico&display=swap);
-} */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container {
+  padding: 20px;
+  margin: 0 auto;
+  box-sizing: 0 0 5px;
+}
+#check {
+  display: none;
+}
+.content {
+  display: none;
+
+}
+label {
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: underline;
+  color: orange;
+  font-weight:bolder;
+}
+#check:checked ~ .content {
+  display: block;
+}
