--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ body {
 
   background-color: orange;
   font-family: 'Pacifico', cursive;
+  border-width: 30px;
 
 }
 
@@ -98,6 +99,9 @@ div {
 #check {
   display: none;
 }
+#check:checked ~ .content {
+  display: block;
+}
 .content {
   display: none;
 
@@ -109,6 +113,19 @@ label {
   color: orange;
   font-weight:bolder;
 }
-#check:checked ~ .content {
+.container2, .container3, .container4, .container5 {
+  padding: 20px;
+  color: orange;
+  margin: 0 auto;
+  box-sizing: 0 0 5px;
+}
+#check2, #check3, #check4, #check5 {
+  display: none;
+}
+#check2:checked ~ .content2, #check3:checked ~ .content3, #check4:checked ~ .content4, #check5:checked ~ .content5 {
   display: block;
+}
+.content2, .content3, .content4, .content5 {
+  display: none;
+
 }
