--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,7 @@ h1 {
   border-color:rgb(255, 230, 0);
   border-width: 5px;
   border-style: solid;
+  text-align: center;
 }
 p {
   color: rgb(195, 89, 195);
@@ -60,6 +61,11 @@ table {
   border-style: solid;
 }
 
+span {
+  font-family: 'Pacifico', cursive;
+  color: purple;
+}
+
 @media (max-width: 768px) {
 
   body {background-color: rgb(150, 92, 150);}
@@ -98,6 +104,7 @@ div {
 }
 #check {
   display: none;
+
 }
 #check:checked ~ .content {
   display: block;
@@ -112,6 +119,7 @@ label {
   text-decoration: underline;
   color: orange;
   font-weight:bolder;
+  text-align:center;
 }
 .container2, .container3, .container4, .container5 {
   padding: 20px;
