--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,6 @@ p {
   font-size: 20px;
   font-weight: 50;
   font-family: 'Caladea', serif;
-
 }
 
 
@@ -44,14 +43,13 @@ h3 {
 }
 
 table {
-  color: green;
+
   background-color:pink;
   padding: 20px 20px 20px 20px;
   border-radius: 10px;
   border-color:rgb(255, 230, 0);
   border-width: 5px;
   border-style: solid;
-  /* font-family: 'Caladea', serif; */
 }
 .responsive-img {
   max-width: 100%;
@@ -144,4 +142,10 @@ label {
 .middle {
   text-align: center;
   background-color: orange;
+}
+.homepagetitle {
+  position:absolute;
+  top: 50px;
+  left:20px;
+  right:20px;
 }
