deleted some html i accidentally pasted in css file

--- a/styles/main.css
+++ b/styles/main.css
@@ -144,19 +144,19 @@ label {
   font-weight:bolder;
   text-align:center;
 }
-.container2, .container3, .container4, .container5 {
+.container2, .container3, .container4, .container5, .container6, .container7 {
   padding: 20px;
   color: orange;
   margin: 0 auto;
   box-sizing: 0 0 5px;
 }
-#check2, #check3, #check4, #check5 {
+#check2, #check3, #check4, #check5, #check6, #check7 {
   display: none;
 }
-#check2:checked ~ .content2, #check3:checked ~ .content3, #check4:checked ~ .content4, #check5:checked ~ .content5 {
+#check2:checked ~ .content2, #check3:checked ~ .content3, #check4:checked ~ .content4, #check5:checked ~ .content5, #check6:checked ~ .content6, #check7:checked ~ .content7 {
   display: block;
 }
-.content2, .content3, .content4, .content5 {
+.content2, .content3, .content4, .content5, .content6, .content7 {
   display: none;
 
 }
