--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,6 @@ body {
   background-color: orange;
   font-family: 'Pacifico', cursive;
   border-width: 30px;
-
 }
 
 h1 {
@@ -180,6 +179,29 @@ label {
   margin: 0 auto;
 }
 
+.read-more-container, .read-more-container2, .read-more-container3,  .read-more-container4{
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
+  margin: 0 auto;
+  gap: 1rem;
+}
+
+.inner-container{
+  padding: 2rem
+}
+
+.read-more-text{
+  display: none;
+}
+
+.read-more-text--show{
+  display: inline;
+  font-family: 'Caladea', serif;
+  color: rgb(195, 89, 195);
+
+}
+
 .button {
   font-family: 'Pacifico', cursive;
   display: inline-block;
@@ -199,4 +221,10 @@ label {
 button:hover {
   color: rgb(181, 167, 239);
   background-color: orange;
+}
+
+.normal-font {
+  font-family: 'Caladea', serif;
+  color: rgb(195, 89, 195);
+  display: inline;
 }
