--- a/styles/main.css
+++ b/styles/main.css
@@ -179,7 +179,8 @@ label {
   margin: 0 auto;
 }
 
-.read-more-container, .read-more-container2, .read-more-container3,  .read-more-container4{
+.read-more-container, .read-more-container2, .read-more-container3,  .read-more-container4,
+ .read-more-container5, .read-more-container6, .read-more-container7, .read-more-container8  {
   display: flex;
   flex-direction: column;
   max-width: 800px;
